fix: footer-wrapper grid gap

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -89,8 +89,7 @@
     padding-top: 80px
     &-wrapper
       grid-template-columns: repeat(6, 1fr)
-      grid-row-gap: 40px
-      grid-column-gap: 50px
+      grid-column-gap: 28px
     &__input
       &__group
         flex-basis: 48%
